<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.linzihao.lx.MainActivity">

    <TextView
            android:text="@string/main_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" android:textAlignment="center"/>
    <Button
            android:text="@string/main_button2"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:id="@+id/button" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" android:onClick="onClickButton_2"/>
    <Button
            android:text="@string/main_button1"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:id="@+id/button3" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="onClickButton_1"/>
</android.support.constraint.ConstraintLayout>
