<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.linzihao.lx.LeaveMessage">

    <TextView
            android:text="@string/leave_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
            android:text="@string/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText4"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText4"
            android:onClick="onClick"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" android:id="@+id/editText4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:layout_width="343dp"
            android:layout_height="170dp"
            android:id="@+id/textView4"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:layout_marginBottom="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/leave_message_show" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>
